# seqtools

./: .gitignore  LICENSE  README.md  pyproject.toml
seqtools/: core.py  entrez.py  feature.py  parser.py  utils.py
seqtools/ortholog/: blast.py
